--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@spectrum-css/page": "^3.0.8",
     "@spectrum-css/typography": "^4.0.5",
     "@spectrum-css/vars": "^4.3.0",
+    "firebase": "^9.5.0",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
